--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   schedule:
-    - cron:  "* 12 * * *" # Runs every minute of 12th hour
+    - cron:  "0 0/12 * * *"  #'*/60 * * * *'
   # Triggers the workflow on push or pull request events but only for the main branch
 #   push:
 #     branches:
@@ -30,25 +30,27 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         
       - name: Set up Python Env
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.9        
+          python-version: '3.10'
+          #architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified     
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install arxiv
           pip install requests
+          pip install pyyaml
           
       - name: Run arxiv report 
         run: |
           python arxiv-report.py
           
       - name: Push new AEs-arxiv-daily.md
-        uses: github-actions-x/commit@v2.8
+        uses: github-actions-x/commit@v2.9
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           commit-message: "Github Action Automatic Update AEs Arxiv Papers"
